<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.udacity.projects.moviesdbapp.DetailItemActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image_iv"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_image_height"
            android:adjustViewBounds="true"
            android:contentDescription="@string/poster_content_description"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/title_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_left_from_edge_margin"
            android:layout_marginStart="@dimen/activity_left_from_edge_margin"
            android:layout_marginTop="@dimen/activity_top_margin"
            android:text="@string/title"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_iv" />

        <TextView
            android:id="@+id/title_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_right_from_edge_margin"
            android:layout_marginLeft="@dimen/activity_left_from_view"
            android:layout_marginRight="@dimen/activity_right_from_edge_margin"
            android:layout_marginStart="@dimen/activity_left_from_view"
            android:layout_marginTop="@dimen/activity_top_margin"
            android:textAlignment="gravity"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_iv" />

        <TextView
            android:id="@+id/release_date_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_left_from_edge_margin"
            android:layout_marginStart="@dimen/activity_left_from_edge_margin"
            android:layout_marginTop="@dimen/activity_top_margin"
            android:text="@string/releaseDate"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_tv" />

        <TextView
            android:id="@+id/release_date_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_right_from_edge_margin"
            android:layout_marginLeft="@dimen/activity_left_from_view"
            android:layout_marginRight="@dimen/activity_right_from_edge_margin"
            android:layout_marginStart="@dimen/activity_left_from_view"
            android:layout_marginTop="@dimen/activity_top_margin"
            android:textAlignment="gravity"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_tv"

            />

        <TextView
            android:id="@+id/vote_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_left_from_edge_margin"
            android:layout_marginStart="@dimen/activity_left_from_edge_margin"
            android:layout_marginTop="@dimen/activity_top_margin"
            android:text="@string/rating"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/release_date_tv" />

        <TextView
            android:id="@+id/vote_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_right_from_edge_margin"
            android:layout_marginLeft="@dimen/activity_left_from_view"
            android:layout_marginRight="@dimen/activity_right_from_edge_margin"
            android:layout_marginStart="@dimen/activity_left_from_view"
            android:layout_marginTop="@dimen/activity_top_margin"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/release_date_tv" />


        <TextView
            android:id="@+id/plot_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_left_from_edge_margin"
            android:layout_marginStart="@dimen/activity_left_from_edge_margin"
            android:layout_marginTop="@dimen/activity_top_margin"
            android:text="@string/summary"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vote_tv" />

        <TextView
            android:id="@+id/plot_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_right_from_edge_margin"
            android:layout_marginLeft="@dimen/activity_left_from_view"
            android:layout_marginRight="@dimen/activity_right_from_edge_margin"
            android:layout_marginStart="@dimen/activity_left_from_view"
            android:layout_marginTop="@dimen/activity_top_margin"
            android:paddingBottom="@dimen/activity_right_from_edge_margin"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vote_tv"

            />

    </android.support.constraint.ConstraintLayout>


</ScrollView>
